# Argos-Budget-Guardian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: budget_policies.py  quickstart.py  with_callbacks.py  with_dashboard.py
src/argos_budget_guardian/: __init__.py
src/argos_budget_guardian/cli/: main.py  setup_wizard.py
src/argos_budget_guardian/core/: budget.py  pricing.py  store.py  tracker.py
src/argos_budget_guardian/dashboard/: components.py  terminal.py
src/argos_budget_guardian/hooks/: budget_hook.py  stop_hook.py  types.py
src/argos_budget_guardian/nlp/: budget_parser.py
src/argos_budget_guardian/wrapper/: guardian.py  query.py
tests/: conftest.py  test_budget.py  test_budget_parser.py  test_cli.py  test_guardian.py  test_hooks.py  test_pricing.py  test_store.py  test_tracker.py
